--- a/api/package.json
+++ b/api/package.json
@@ -13,18 +13,23 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/body-parser": "^1.19.2",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.13",
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.14",
 		"@types/helmet": "^4.0.0",
 		"@types/morgan": "^1.9.3",
+		"@types/node": "^18.11.11",
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
 		"body-parser": "^1.20.1",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
+		"mariadb": "^3.0.2",
 		"morgan": "^1.10.0"
 	}
 }
